fix pull-quotes on mobile

--- a/source/less/responsive-767px-max.less
+++ b/source/less/responsive-767px-max.less
@@ -110,7 +110,14 @@
     &.fade  { top: -100px; }
     &.fade.in { top: 20px; }
   }
-
+  *[data-pullquote]:before {
+      clear: both;
+      display: block;
+      float: none;
+      margin: 28px 0 20px;
+      padding: 16px 1px 18px;
+      width: 100%;
+  }
 }
 
 
